<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPurple"
        tools:context=".MainActivity">


    <Button
            android:text="@string/exitButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/exitButton"
            style="@android:style/Widget.Button" android:background="@color/colorYellow"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textStyle="bold"
            android:layout_marginEnd="36dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="36dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/finishTime"
            app:layout_constraintVertical_bias="0.839"
    />
    <TextView
            android:text="@string/clicker_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/finishTime" app:fontFamily="monospace"
            android:textSize="36sp" android:textColor="@color/colorYellow"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024"/>
    <Button
            android:text="@string/newGameButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/newGameButton"
            style="@android:style/Widget.Button" android:background="@color/colorYellow"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textStyle="bold"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/finishTime" app:layout_constraintVertical_bias="0.84"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/exitButton"
            android:layout_marginRight="8dp"/>
</android.support.constraint.ConstraintLayout>