<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPurple"
        tools:context=".FinishActivity">

    <TextView
            android:text="@string/finish_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/finishTitle" app:fontFamily="monospace"
            android:textSize="36sp" android:textColor="@color/colorYellow"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024"/>

    <TextView
            android:text="@string/finishText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/finishText" app:fontFamily="monospace"
            android:textSize="36sp" android:textColor="@color/colorYellow"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/finishTitle"/>

    <Button
            android:text="@string/exitButton"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:id="@+id/finishGameButton"
            style="@android:style/Widget.Button" android:background="@color/colorYellow"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/finishTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.75" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" android:layout_marginBottom="8dp" android:layout_marginTop="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/finishTime" app:fontFamily="monospace"
            android:textSize="36sp" android:textColor="@color/colorYellow"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/finishText"
            app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>